--- a/index.html
+++ b/index.html
@@ -164,12 +164,12 @@
                     <p class="text-gray-200 mb-4 text-sm sm:text-base">Perfect for Birthdays, Weddings, Parties, and Corporate Events.</p>
 
                     <div class="flex justify-center md:justify-start gap-3 flex-wrap">
-                        <a href="https://www.facebook.com/share/1YpcSUih29/" target="_blank" rel="noopener" class="uppercase px-4 sm:px-5 py-2.5 rounded-lg bg-gradient-to-r from-[#00c6ff] to-[#6b28a8] text-black font-bold text-xs sm:text-sm transform transition duration-200 hover:scale-[1.03] hover:brightness-105 hover:shadow-lg active:scale-95 focus:outline-none focus:ring-2 focus:ring-white/30">Book Now</a>
-                        <a href="calendar.php"
+                        <a href="https://www.facebook.com/share/1YpcSUih29/" target="_blank" rel="noopener" class="uppercase px-4 sm:px-5 py-2.5 rounded-lg bg-gradient-to-r from-[#00c6ff] to-[#6b28a8] text-black font-bold text-xs sm:text-sm transform transition duration-200 hover:scale-[1.03] hover:brightness-105 hover:shadow-lg active:scale-95 focus:outline-none focus:ring-2 focus:ring-white/30">Book Now!</a>
+                        <!-- <a href="calendar.php"
                             class="px-4 sm:px-5 py-2.5 rounded-lg bg-white/10 hover:bg-white/20 text-xs sm:text-sm transform transition duration-200 hover:scale-[1.03] hover:brightness-105 hover:shadow-lg active:scale-95 focus:outline-none focus:ring-2 focus:ring-white/30 cursor-pointer text-white font-semibold"
                             target="_blank" rel="noopener">
                           Check Availability
-                        </a>
+                        </a> -->
                     </div>
                 </div>
             </div>
@@ -286,7 +286,7 @@
         <section id="faq" class="space-y-4">
             <h2 class="text-xl sm:text-2xl uppercase">Frequently Asked Questions</h2>
 
-            <div class="space-y-2 max-w-4xl">
+            <div class="space-y-2 max-w-6xl">
                 <!-- Q1 -->
                 <div class="bg-[#242424] rounded-lg p-3 sm:p-4">
                     <button class="w-full flex justify-between items-center faq-btn py-2">
@@ -300,8 +300,8 @@
                             <li><strong>Big Claw machine</strong> - ₱3,000 per day 💰 + Shipping Fee 💸🚚📦 + Prizes 🧸🎁 (Optional)</li>
                             <li><strong>Mini Claw Machine</strong> - ₱2,000 per day 💰 + Shipping Fee 💸🚚📦 + Prizes 🧸🎁 (Optional)</li>
                             <li><strong>Arcade Console Machine 🕹️🎮🕹️</strong> - ₱2,500 per day 💰 + Shipping Fee 💸🚚📦</li>
-                            <li><strong>Basketball Arcade Machine 🏀 </strong>- ₱5,000 per day 💰 + Shipping Fee 💸🚚📦 + Prizes 🧸🎁 (Optional)</li>
-                            
+                            <li><strong>Basketball Arcade Machine 🏀 </strong>- ₱2,500 per day 💰 + Shipping Fee 💸🚚📦 + Prizes 🧸🎁 (Optional)</li>
+                            <li><strong>Falling Sticks Machine  </strong>- ₱3,000 per day 💰 + Shipping Fee 💸🚚📦</li>
                         </ul>
                     </div>
                 </div>
@@ -313,7 +313,10 @@
                         <span class="text-gray-400">+</span>
                     </button>
                     <div class="faq-panel hidden text-gray-200 pt-2 text-sm sm:text-base">
-                        <p>We offer flexible delivery options for our arcade machine rental. We can ship the machine via Lalamove or other trusted delivery couriers - please note that delivery fees will be shouldered by the renter. Alternatively, you're also welcome to personally pick up the machine using your own vehicle. Thank you!</p>
+                        <p>For deliveries within Metro Manila, we use our service pick-up truck to ensure safe and secure transport of our machines.</p>
+                        <p class="mt-2">In cases where our service vehicle is unavailable or for locations outside Metro Manila, deliveries will be arranged via Lalamove L300 with helper to properly handle the equipment.</p>
+                        <p class="mt-2">⏰ Delivery Hours: 9:00 AM – 11:59 PM only</p>
+                        <p>📍 Delivery fees are shouldered by the renter and may vary depending on your location. </p>
                     </div>
                 </div>
 
@@ -327,7 +330,9 @@
                         <ul class="list-disc pl-5">
                             <li>Cash</li>
                             <li>Gcash/Maya</li>
-                            <li>Bank Transfer (MetroBank/Security Bank)</li>
+                            <li>Bank Transfer (MetroBank/BPI Bank)</li>
+                            <p class="mt-3">NOTE ‼️</p>
+                            <p>To secure a slot, a 50% downpayment or full payment is needed.</p>
                         </ul>
                     </div>
                 </div>
